--- a/static/css/themes.css
+++ b/static/css/themes.css
@@ -1,3 +1,7 @@
+body {
+  --transition-duration: 0ms;
+}
+
 body,
 body.light {
   --app-color-primary: #6002ee;
